--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Arvindkr123/NodeJS_learning#readme",
   "dependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "express": "^4.17.1"
   }
 }
