--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/Arvindkr123/NodeJS_learning#readme",
   "dependencies": {
-    "nodemon": "^3.0.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.2"
   }
 }
